--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -10,7 +10,7 @@
         List of requests (<b>{{listSubmitted.length}}</b>) in status <b>submitted</b>
       </p>
       <div class="row small-padding">
-        <div class="col-sm-5">
+        <div class="col-sm-2">
           <button type="button" class="btn btn-sort m-2" ng-click="changeSubmittedSort('prepid')">
             <i ng-if="sortSubmittedOn != 'prepid'" class="fa fa-sort-amount-asc spacing-r" title="Click to sort ascending by prepid"></i>
             <i ng-if="sortSubmittedOn == 'prepid' && sortSubmittedOrder == 1" class="fa fa-sort-amount-asc spacing-r sort-selected" title="Click to sort descending by prepid"></i>
@@ -18,6 +18,7 @@
           </button>
         </div>
         <div class="col-sm-2">
+          <!-- Events -->
           <button type="button" class="btn btn-sort m-2" ng-click="changeSubmittedSort('done')">
             <i ng-if="sortSubmittedOn != 'done'" class="fa fa-sort-numeric-asc spacing-r" title="Click to sort ascending by done events"></i>
             <i ng-if="sortSubmittedOn == 'done' && sortSubmittedOrder == 1" class="fa fa-sort-numeric-asc spacing-r sort-selected" title="Click to sort descending by done events"></i>
@@ -30,11 +31,34 @@
             <i ng-if="sortSubmittedOn == 'expected' && sortSubmittedOrder == -1" class="fa fa-sort-numeric-desc spacing-r sort-selected" title="Click to sort ascending by expected events"></i>
           </button>
         </div>
+        <div class="col-sm-2">
+          <!-- Lumisections -->
+          <button type="button" class="btn btn-sort m-2" ng-click="changeSubmittedSort('done_lumis')">
+            <i ng-if="sortSubmittedOn != 'done_lumis'" class="fa fa-sort-numeric-asc spacing-r" title="Click to sort ascending by done lumisections"></i>
+            <i ng-if="sortSubmittedOn == 'done_lumis' && sortSubmittedOrder == 1" class="fa fa-sort-numeric-asc spacing-r sort-selected" title="Click to sort descending by done lumisections"></i>
+            <i ng-if="sortSubmittedOn == 'done_lumis' && sortSubmittedOrder == -1" class="fa fa-sort-numeric-desc spacing-r sort-selected" title="Click to sort ascending by done lumisections"></i>
+          </button>
+          /
+          <button type="button" class="btn btn-sort m-2" ng-click="changeSubmittedSort('expected_lumis')">
+            <i ng-if="sortSubmittedOn != 'expected_lumis'" class="fa fa-sort-numeric-asc spacing-r" title="Click to sort ascending by expected lumisections"></i>
+            <i ng-if="sortSubmittedOn == 'expected_lumis' && sortSubmittedOrder == 1" class="fa fa-sort-numeric-asc spacing-r sort-selected" title="Click to sort descending by expected lumisections"></i>
+            <i ng-if="sortSubmittedOn == 'expected_lumis' && sortSubmittedOrder == -1" class="fa fa-sort-numeric-desc spacing-r sort-selected" title="Click to sort ascending by expected lumisections"></i>
+          </button>
+        </div>
         <div class="col-sm-1">
+          <!-- Progress (Events) -->
           <button type="button" class="btn btn-sort m-2" ng-click="changeSubmittedSort('percentage')">
-            <i ng-if="sortSubmittedOn != 'percentage'" class="fa fa-sort-numeric-asc spacing-r" title="Click to sort ascending by progress"></i>
-            <i ng-if="sortSubmittedOn == 'percentage' && sortSubmittedOrder == 1" class="fa fa-sort-numeric-asc spacing-r sort-selected" title="Click to sort descending by progress"></i>
-            <i ng-if="sortSubmittedOn == 'percentage' && sortSubmittedOrder == -1" class="fa fa-sort-numeric-desc spacing-r sort-selected" title="Click to sort ascending by progress"></i>
+            <i ng-if="sortSubmittedOn != 'percentage'" class="fa fa-sort-numeric-asc spacing-r" title="Click to sort ascending by progress (based on events)"></i>
+            <i ng-if="sortSubmittedOn == 'percentage' && sortSubmittedOrder == 1" class="fa fa-sort-numeric-asc spacing-r sort-selected" title="Click to sort descending by progress (based on events)"></i>
+            <i ng-if="sortSubmittedOn == 'percentage' && sortSubmittedOrder == -1" class="fa fa-sort-numeric-desc spacing-r sort-selected" title="Click to sort ascending by progress (based on events)"></i>
+          </button>
+        </div>
+        <div class="col-sm-1">
+          <!-- Progress (Lumisections) -->
+          <button type="button" class="btn btn-sort m-2" ng-click="changeSubmittedSort('percentageLumis')">
+            <i ng-if="sortSubmittedOn != 'percentageLumis'" class="fa fa-sort-numeric-asc spacing-r" title="Click to sort ascending by progress (based on lumis)"></i>
+            <i ng-if="sortSubmittedOn == 'percentageLumis' && sortSubmittedOrder == 1" class="fa fa-sort-numeric-asc spacing-r sort-selected" title="Click to sort descending by progress (based on lumis)"></i>
+            <i ng-if="sortSubmittedOn == 'percentageLumis' && sortSubmittedOrder == -1" class="fa fa-sort-numeric-desc spacing-r sort-selected" title="Click to sort ascending by progress (based on lumis)"></i>
           </button>
         </div>
         <div class="col-sm-2">
@@ -53,7 +77,7 @@
         </div>
       </div>
       <div ng-repeat="submitted in listSubmitted" class="row zebra-lines small-padding">
-        <div class="col-sm-5">
+        <div class="col-sm-2">
           <a ng-href="{{submitted.url}}" target="_blank">{{submitted.prepid}}</a>
           <br><small>{{submitted.dataset}}</small>
           <small title="Number of events estimated from {{submitted.estimate_from}}" style="color:red" ng-if="submitted.estimate_from"><br>(Estimate from {{submitted.estimate_from}})</small>
@@ -65,8 +89,16 @@
           /
           <b title="{{submitted.expected}}">{{humanReadable ? (submitted.expected | readableNumbers) : submitted.expected}}</b>
         </div>
+        <div class="col-sm-2">
+          <small>Lumisections:</small><br>
+          <b title="{{submitted.done_lumis}}">{{humanReadable ? (submitted.done_lumis | readableNumbers) : submitted.done_lumis}}</b>
+          <small title="Force completed" style="color:red" ng-if="submitted.force_completed">(FC)</small>
+          /
+          <b title="{{submitted.expected_lumis}}">{{humanReadable ? (submitted.expected_lumis | readableNumbers) : submitted.expected_lumis}}</b>
+        </div>
         <div class="col-sm-1">
-          <small>Progress:</small><br>
+          <!-- Progress (on events) -->
+          <small>Progress (events):</small><br>
           <div class="progress total-bar" ng-show="submitted.expected > 0">
             <div class="font-shadow progress-bar pmp-orange"
                  ng-class="{'pmp-red': submitted.output_dataset_status == 'INVALID' || submitted.output_dataset_status == 'DELETED',
@@ -80,6 +112,25 @@
                         max-width: 100%;
                         width:{{submitted.percentage}}%;">
               {{submitted.percentage | readableNumbers}}%
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-1">
+          <!-- Progress (on lumisections) -->
+          <small>Progress (lumis):</small><br>
+          <div class="progress total-bar" ng-show="submitted.expected > 0">
+            <div class="font-shadow progress-bar pmp-orange"
+                 ng-class="{'pmp-red': submitted.output_dataset_status == 'INVALID' || submitted.output_dataset_status == 'DELETED',
+                            'pmp-blue': submitted.output_dataset_status == 'VALID',
+                            'pmp-orange': submitted.output_dataset_status == 'PRODUCTION'}"
+                 role="progressbar"
+                 aria-valuemin="0"
+                 aria-valuemax="100"
+                 title="{{submitted.output_dataset}} is {{submitted.output_dataset_status}} at {{submitted.percentageLumis | readableNumbers}}%"
+                 style="color: black;
+                        max-width: 100%;
+                        width:{{submitted.percentageLumis}}%;">
+              {{submitted.percentageLumis | readableNumbers}}%
             </div>
           </div>
         </div>
@@ -107,7 +158,7 @@
         List of requests (<b>{{listDone.length}}</b>) in status <b>done</b>
       </p>
       <div class="row small-padding">
-        <div class="col-sm-5">
+        <div class="col-sm-2">
           <button type="button" class="btn btn-sort m-2" ng-click="changeDoneSort('prepid')">
             <i ng-if="sortDoneOn != 'prepid'" class="fa fa-sort-amount-asc spacing-r" title="Click to sort ascending by prepid"></i>
             <i ng-if="sortDoneOn == 'prepid' && sortDoneOrder == 1" class="fa fa-sort-amount-asc spacing-r sort-selected" title="Click to sort descending by prepid"></i>
@@ -115,6 +166,7 @@
           </button>
         </div>
         <div class="col-sm-2">
+          <!-- Events -->
           <button type="button" class="btn btn-sort m-2" ng-click="changeDoneSort('done')">
             <i ng-if="sortDoneOn != 'done'" class="fa fa-sort-numeric-asc spacing-r" title="Click to sort ascending by done events"></i>
             <i ng-if="sortDoneOn == 'done' && sortDoneOrder == 1" class="fa fa-sort-numeric-asc spacing-r sort-selected" title="Click to sort descending by done events"></i>
@@ -127,11 +179,34 @@
             <i ng-if="sortDoneOn == 'expected' && sortDoneOrder == -1" class="fa fa-sort-numeric-desc spacing-r sort-selected" title="Click to sort ascending by expected events"></i>
           </button>
         </div>
+        <div class="col-sm-2">
+          <!-- Lumisections -->
+          <button type="button" class="btn btn-sort m-2" ng-click="changeDoneSort('done_lumis')">
+            <i ng-if="sortDoneOn != 'done_lumis'" class="fa fa-sort-numeric-asc spacing-r" title="Click to sort ascending by done lumisections"></i>
+            <i ng-if="sortDoneOn == 'done_lumis' && sortDoneOrder == 1" class="fa fa-sort-numeric-asc spacing-r sort-selected" title="Click to sort descending by done lumisections"></i>
+            <i ng-if="sortDoneOn == 'done_lumis' && sortDoneOrder == -1" class="fa fa-sort-numeric-desc spacing-r sort-selected" title="Click to sort ascending by done lumisections"></i>
+          </button>
+          /
+          <button type="button" class="btn btn-sort m-2" ng-click="changeDoneSort('expected_lumis')">
+            <i ng-if="sortDoneOn != 'expected_lumis'" class="fa fa-sort-numeric-asc spacing-r" title="Click to sort ascending by expected lumisections"></i>
+            <i ng-if="sortDoneOn == 'expected_lumis' && sortDoneOrder == 1" class="fa fa-sort-numeric-asc spacing-r sort-selected" title="Click to sort descending by expected lumisections"></i>
+            <i ng-if="sortDoneOn == 'expected_lumis' && sortDoneOrder == -1" class="fa fa-sort-numeric-desc spacing-r sort-selected" title="Click to sort ascending by expected lumisections"></i>
+          </button>
+        </div>
         <div class="col-sm-1">
+          <!-- Progress (Events) -->
           <button type="button" class="btn btn-sort m-2" ng-click="changeDoneSort('percentage')">
-            <i ng-if="sortDoneOn != 'percentage'" class="fa fa-sort-numeric-asc spacing-r" title="Click to sort ascending by progress"></i>
-            <i ng-if="sortDoneOn == 'percentage' && sortDoneOrder == 1" class="fa fa-sort-numeric-asc spacing-r sort-selected" title="Click to sort descending by progress"></i>
-            <i ng-if="sortDoneOn == 'percentage' && sortDoneOrder == -1" class="fa fa-sort-numeric-desc spacing-r sort-selected" title="Click to sort ascending by progress"></i>
+            <i ng-if="sortDoneOn != 'percentage'" class="fa fa-sort-numeric-asc spacing-r" title="Click to sort ascending by progress (based on events)"></i>
+            <i ng-if="sortDoneOn == 'percentage' && sortDoneOrder == 1" class="fa fa-sort-numeric-asc spacing-r sort-selected" title="Click to sort descending by progress (based on events)"></i>
+            <i ng-if="sortDoneOn == 'percentage' && sortDoneOrder == -1" class="fa fa-sort-numeric-desc spacing-r sort-selected" title="Click to sort ascending by progress (based on events)"></i>
+          </button>
+        </div>
+        <div class="col-sm-1">
+          <!-- Progress (Lumisections) -->
+          <button type="button" class="btn btn-sort m-2" ng-click="changeDoneSort('percentageLumis')">
+            <i ng-if="sortDoneOn != 'percentageLumis'" class="fa fa-sort-numeric-asc spacing-r" title="Click to sort ascending by progress (based on lumis)"></i>
+            <i ng-if="sortDoneOn == 'percentageLumis' && sortDoneOrder == 1" class="fa fa-sort-numeric-asc spacing-r sort-selected" title="Click to sort descending by progress (based on lumis)"></i>
+            <i ng-if="sortDoneOn == 'percentageLumis' && sortDoneOrder == -1" class="fa fa-sort-numeric-desc spacing-r sort-selected" title="Click to sort ascending by progress (based on lumis)"></i>
           </button>
         </div>
         <div class="col-sm-2">
@@ -150,7 +225,7 @@
         </div>
       </div>
       <div ng-repeat="done in listDone" class="row zebra-lines small-padding">
-        <div class="col-sm-5">
+        <div class="col-sm-2">
           <a ng-href="{{done.url}}" target="_blank">{{done.prepid}}</a>
           <br><small>{{done.dataset}}</small>
           <small title="Number of events estimated from {{done.estimate_from}}" style="color:red" ng-if="done.estimate_from"><br>(Estimate from {{done.estimate_from}})</small>
@@ -162,7 +237,15 @@
           /
           <b title="{{done.expected}}">{{humanReadable ? (done.expected | readableNumbers) : done.expected}}</b>
         </div>
+        <div class="col-sm-2">
+          <small>Lumisections:</small><br>
+          <b title="{{done.done_lumis}}">{{humanReadable ? (done.done_lumis | readableNumbers) : done.done_lumis}}</b>
+          <small title="Force completed" style="color:red" ng-if="done.force_completed">(FC)</small>
+          /
+          <b title="{{done.expected_lumis}}">{{humanReadable ? (done.expected_lumis | readableNumbers) : done.expected_lumis}}</b>
+        </div>
         <div class="col-sm-1">
+          <!-- Progress (on events) -->
           <small>Progress:</small><br>
           <div class="progress total-bar" ng-show="done.expected > 0">
             <div class="font-shadow progress-bar pmp-blue"
@@ -177,6 +260,25 @@
                         max-width: 100%;
                         width:{{done.percentage}}%;">
               {{done.percentage | readableNumbers}}%
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-1">
+          <!-- Progress (on lumisections) -->
+          <small>Progress:</small><br>
+          <div class="progress total-bar" ng-show="done.expected > 0">
+            <div class="font-shadow progress-bar pmp-blue"
+                 ng-class="{'pmp-red': done.output_dataset_status == 'INVALID' || done.output_dataset_status == 'DELETED',
+                            'pmp-blue': done.output_dataset_status == 'VALID',
+                            'pmp-orange': done.output_dataset_status == 'PRODUCTION'}"
+                 role="progressbar"
+                 aria-valuemin="0"
+                 aria-valuemax="100"
+                 title="{{done.output_dataset}} is {{done.output_dataset_status}} at {{done.percentageLumis | readableNumbers}}%"
+                 style="color: black;
+                        max-width: 100%;
+                        width:{{done.percentageLumis}}%;">
+              {{done.percentageLumis | readableNumbers}}%
             </div>
           </div>
         </div>
